--- a/iot/小米路由器学习记录.md
+++ b/iot/小米路由器学习记录.md
@@ -2,7 +2,11 @@
 
 ### 主题为: Exploit(Almost) all Xiaomi Routers Using Logical Bugs. 
 
-### 视频链接:
+### 视频链接: https://www.bilibili.com/video/BV1gf4y1D7L2
+
+> 文章的开头首先感谢长亭科技的大佬们提供了这个演讲视频,收获很多.
+>
+> 这篇文章仅用于自己学习记录.
 
 ### Background
 
@@ -193,15 +197,83 @@ A: 发现只能在解压后做文章了.
 
 于是,使用010来查看这个luac文件.
 
-我们发现luac文件头是经过修改的,他并不是普通luac文件的lua头,而是使用了`Fate`
+然后发现小米的luac文件头是经过修改的,他并不是普通luac文件的lua头,而是使用了`Fate/Z`
 
-关于mi_lua后续的分析要理解一下再放上来.
+#### 正常的luac文件
 
+首先可以看到正常的luac文件中第一个结构是global header,包含了magic number,版本,字节序以及一些数据类型大小.
 
+![lua1.png](https://i.loli.net/2020/10/04/v9S7pru5mldhUKi.png)![1601798506555](C:\Users\59634\AppData\Roaming\Typora\typora-user-images\1601798506555.png)
+
+在global header之后是一个叫做function的结构,里面包含了一个lua函数所需要的所有信息.
+
+可以认为function结构他就表示为一个函数.
+
+function是一个递归的结构,因为lua的函数中可以写一个子函数,表现在luac中就是一个嵌套的function结构.
+
+![lua2.png](https://i.loli.net/2020/10/04/vtpE5GnxeMAKFbs.png)
+
+#### Difference be'tween Luac
+
+##### 1.文件头的不同
+
+![lua3.png](https://i.loli.net/2020/10/04/RHI3Ejl6NOPc27G.png)
+
+##### 2.对字符串进行异或加密
+
+在小米的luac中并不能发现明文的字符串,逆向后发现小米的luac对所有的字符串进行了异或加密.
+
+![lua4.png](https://i.loli.net/2020/10/04/IWZsP4qHpM1cKuf.png)
+
+##### 3. 结构体成员顺序进行修改
+
+![lua5.png](https://i.loli.net/2020/10/04/Y7jcXrGBWKJMZtE.png)
+
+#### 4. 对数据段类型数据进行修改
+
+在正常的luac中枚举是从0开始的,而小米的luac中枚举是从3开始的,而且它多了一种数据类型.
+
+![lua6.png](https://i.loli.net/2020/10/04/I4hyCqnErOUXVTB.png)
+
+![lua7.png](https://i.loli.net/2020/10/04/4kGYc6aL5rnxPOC.png)
+
+后续研究发现,这个12`LUA_XIAOMI`其实是补充了lua5.1中没有的整形数据类型.
+
+![lua8.png](https://i.loli.net/2020/10/04/58OKfxtbmasEvpQ.png)
+
+##### 5. 对opcode id进行打乱.
+
+![lua9.png](https://i.loli.net/2020/10/04/z46OPgblZoJqd2B.png)
+
+##### 6. 小米的luac多出一条指令.
+
+![lua10.png](https://i.loli.net/2020/10/04/Qwkmn6h2PgT7ljA.png)
+
+以上就是mi_luac与普通的luac中所有的不同
+
+#### 如何还原.
+
+长亭大佬编写了一套工具,但是我打不开了.
+
+他们使用了一个python库`Construct`
+
+实现思路是如下图:
+
+![lua11.png](https://i.loli.net/2020/10/04/kH6yx7S2AjKnX9E.png)
+
+中间层的一些实现: 这里他们展示的是对字符串的还原.
+
+![lua12.png](https://i.loli.net/2020/10/04/Tm3r6sN7BMIUPE9.png)
 
 ### 后续:
 
-就是利用脚本还原lua,然后再分析源码,挖了更多的洞.
+就是利用脚本还原lua,然后再分析源码,挖了更多的洞,大部分都是web相关内容,我在这里就不复述了.
+
+值得一提的是,`CVE-2020-11961`提到的后台登录方式还是gaia哥2019年报上去的洞的利用方法.
+
+所以小米路由器这一年其实做的工作是实现mi_lua的保护机制,但是在长亭大哥打穿了之后,可能以后也不能用了...
+
+
 
 
 
